samples/_failures_safe/1761668423_46e4ce_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3cf7840f.c: In function ‘main’:
./samples/SAFE/__tmp_3cf7840f.c:130:17: error: expected expression at end of input
  130 |                 cols2 =
      |                 ^~~~~
./samples/SAFE/__tmp_3cf7840f.c:130:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3cf7840f.c:130:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3cf7840f.c:130:17: error: expected declaration or statement at end of input
